--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
                     >
                       <i class="fa fa-map-marker-alt text-primary"></i>
                     </div>
-                    <span>123 Street, New York, USA</span>
+                    <span>1166 Jefferson Ave Suite A, Buffalo, NY 14208</span>
                   </div>
                 </div>
                 <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
@@ -162,7 +162,7 @@
                     >
                       <i class="fa fa-envelope-open text-primary"></i>
                     </div>
-                    <span>info@example.com</span>
+                    <span>info@sayyesbuffalo.org</span>
                   </div>
                 </div>
                 <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
@@ -173,7 +173,7 @@
                     >
                       <i class="fa fa-phone-alt text-primary"></i>
                     </div>
-                    <span>+012 345 6789</span>
+                    <span>(716) 247-5310</span>
                   </div>
                 </div>
               </div>
@@ -181,7 +181,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
               <iframe
                 class="position-relative rounded w-100 h-100"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                src="https://www.google.com/maps/embed?pb=!4m14!1m7!3m6!1s0x89d3125aa701fca5:0x8af14522a7e854c!2sSay+Yes+Buffalo!8m2!3d42.9070323!4d-78.8541146!16s%2Fg%2F11bc7qlglg!3m5!1s0x89d3125aa701fca5:0x8af14522a7e854c!8m2!3d42.9070323!4d-78.8541146!16s%2Fg%2F11bc7qlglg"
                 frameborder="0"
                 style="min-height: 400px; border: 0"
                 allowfullscreen=""
@@ -191,12 +191,6 @@
             </div>
             <div class="col-md-6">
               <div class="wow fadeInUp" data-wow-delay="0.5s">
-                <p class="mb-4">
-                  The contact form is currently inactive. Get a functional and
-                  working contact form with Ajax & PHP in a few minutes. Just
-                  copy and paste the files, add a little code and you're done.
-                  <a href="https://htmlcodex.com/contact-form">Download Now</a>.
-                </p>
                 <form>
                   <div class="row g-3">
                     <div class="col-md-6">
