--- a/about.html
+++ b/about.html
@@ -78,31 +78,7 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link active">About</a>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Jobs</a
-              >
-              <div class="dropdown-menu rounded-0 m-0">
-                <a href="job-list.html" class="dropdown-item">Job List</a>
-                <a href="job-detail.html" class="dropdown-item">Job Detail</a>
-              </div>
-            </div>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Pages</a
-              >
-              <div class="dropdown-menu rounded-0 m-0">
-                <a href="category.html" class="dropdown-item">Job Category</a>
-                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                <a href="404.html" class="dropdown-item">404</a>
-              </div>
-            </div>
+            <a href="job-list.html" class="nav-item nav-link">Jobs</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
             <a href="signin.html" class="nav-item nav-link">Sign In</a>
           </div>
