Updated the navbar and footer in contact.html

--- a/contact.html
+++ b/contact.html
@@ -78,31 +78,7 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Jobs</a
-              >
-              <div class="dropdown-menu rounded-0 m-0">
-                <a href="job-list.html" class="dropdown-item">Job List</a>
-                <a href="job-detail.html" class="dropdown-item">Job Detail</a>
-              </div>
-            </div>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Pages</a
-              >
-              <div class="dropdown-menu rounded-0 m-0">
-                <a href="category.html" class="dropdown-item">Job Category</a>
-                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                <a href="404.html" class="dropdown-item">404</a>
-              </div>
-            </div>
+            <a href="job-list.html" class="nav-item nav-link">Jobs</a>
             <a href="contact.html" class="nav-item nav-link active">Contact</a>
             <a href="signin.html" class="nav-item nav-link">Sign In</a>
           </div>
@@ -281,44 +257,51 @@
             <div class="col-lg-3 col-md-6">
               <h5 class="text-white mb-4">Contact</h5>
               <p class="mb-2">
-                <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York,
-                USA
+                <i class="fa fa-map-marker-alt me-3"></i>1166 Jefferson Ave
+                Suite A, Buffalo, NY 14208
               </p>
               <p class="mb-2">
-                <i class="fa fa-phone-alt me-3"></i>+012 345 67890
+                <i class="fa fa-phone-alt me-3"></i>(716) 247-5310
               </p>
               <p class="mb-2">
-                <i class="fa fa-envelope me-3"></i>info@example.com
+                <i class="fa fa-envelope me-3"></i>info@sayyesbuffalo.org
               </p>
               <div class="d-flex pt-2">
-                <a class="btn btn-outline-light btn-social" href=""
-                  ><i class="fab fa-twitter"></i
-                ></a>
-                <a class="btn btn-outline-light btn-social" href=""
+                <a
+                  class="btn btn-outline-light btn-social"
+                  href="https://www.facebook.com/SayYesBuffalo/"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a class="btn btn-outline-light btn-social" href=""
+                <a
+                  class="btn btn-outline-light btn-social"
+                  href="https://www.youtube.com/channel/UCzppJgEFkfs2tCyoUgMMu8w/videos"
                   ><i class="fab fa-youtube"></i
                 ></a>
-                <a class="btn btn-outline-light btn-social" href=""
+                <a
+                  class="btn btn-outline-light btn-social"
+                  href="https://www.linkedin.com/company/sayyesbuffalo/"
                   ><i class="fab fa-linkedin-in"></i
                 ></a>
               </div>
             </div>
             <div class="col-lg-3 col-md-6">
               <h5 class="text-white mb-4">Newsletter</h5>
-              <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+              <p>
+                Stay in the know with our newsletter! Get exclusive updates on
+                job opportunities, resources, and career development tailored
+                for Say Yes Buffalo Scholars and Alumni.
+              </p>
               <div class="position-relative mx-auto" style="max-width: 400px">
                 <input
                   class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                   type="text"
-                  placeholder="Your email"
+                  placeholder="Your Email"
                 />
                 <button
                   type="button"
                   class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
                 >
-                  SignUp
+                  Sign Up
                 </button>
               </div>
             </div>
@@ -328,8 +311,9 @@
           <div class="copyright">
             <div class="row">
               <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a class="border-bottom" href="#">Your Site Name</a>, All
-                Right Reserved.
+                &copy;
+                <a class="border-bottom" href="#">sayyestocareersbuffalo.com</a
+                >, All Right Reserved.
 
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                 Designed By
