--- a/job-list.html
+++ b/job-list.html
@@ -244,6 +244,66 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="job-item p-4 mb-4">
+                          <div class="row g-4">
+                              <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                                  <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-7.png" alt="" style="width: 80px; height: 80px;">
+                                  <div class="text-start ps-4">
+                                      <h5 class="mb-3">Registered Nurse</h5>
+                                      <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                                      <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                                      <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$75K</span>
+                                  </div>
+                              </div>
+                              <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                                  <div class="d-flex mb-3">
+                                      <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                                      <a class="btn btn-primary" href="">Apply Now</a>
+                                  </div>
+                                  <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Feb 14, 2024</small>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="job-item p-4 mb-4">
+                        <div class="row g-4">
+                            <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                                <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-8.png" alt="" style="width: 80px; height: 80px;">
+                                <div class="text-start ps-4">
+                                    <h5 class="mb-3">Exhibit Technician</h5>
+                                    <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                                    <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                                    <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$65K</span>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                                <div class="d-flex mb-3">
+                                    <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                                    <a class="btn btn-primary" href="">Apply Now</a>
+                                </div>
+                                <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Mar 18, 2024</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="job-item p-4 mb-4">
+                      <div class="row g-4">
+                          <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                              <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-9.png" alt="" style="width: 80px; height: 80px;">
+                              <div class="text-start ps-4">
+                                  <h5 class="mb-3">Exhibit Technician</h5>
+                                  <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Buffalo, NY</span>
+                                  <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
+                                  <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$65K</span>
+                              </div>
+                          </div>
+                          <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                              <div class="d-flex mb-3">
+                                  <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                                  <a class="btn btn-primary" href="">Apply Now</a>
+                              </div>
+                              <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Deadline: Mar 18, 2024</small>
+                          </div>
+                      </div>
+                  </div>
       <!-- Jobs End -->
 
         <!-- Footer Start -->
@@ -295,14 +355,6 @@
             
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
             Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                      </div>
-                      <div class="col-md-6 text-center text-md-end">
-                          <div class="footer-menu">
-                              <a href="">Home</a>
-                              <a href="">Cookies</a>
-                              <a href="">Help</a>
-                              <a href="">FQAs</a>
-                          </div>
                       </div>
                   </div>
               </div>
