--- a/about.html
+++ b/about.html
@@ -166,8 +166,8 @@
       </div>
       <!-- About End -->
 
-         <!-- Footer Start -->
-         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <!-- Footer Start -->
+        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
           <div class="container py-5">
               <div class="row g-5">
                   <div class="col-lg-3 col-md-6">
@@ -216,25 +216,16 @@
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
             Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                       </div>
-                      <div class="col-md-6 text-center text-md-end">
-                          <div class="footer-menu">
-                              <a href="">Home</a>
-                              <a href="">Cookies</a>
-                              <a href="">Help</a>
-                              <a href="">FQAs</a>
-                          </div>
-                      </div>
                   </div>
               </div>
           </div>
       </div>
       <!-- Footer End -->
 
+
       <!-- Back to Top -->
-      <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
-        ><i class="bi bi-arrow-up"></i
-      ></a>
-    </div>
+      <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+  </div>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
