--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
             <a href="signin.html" class="nav-item nav-link">Sign In</a>
           </div>
           <a
-            href=""
+            href="postajob.html"
             class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block"
             >Post A Job<i class="fa fa-arrow-right ms-3"></i
           ></a>
@@ -166,66 +166,111 @@
       </div>
       <!-- About End -->
 
-        <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-          <div class="container py-5">
-              <div class="row g-5">
-                  <div class="col-lg-3 col-md-6">
-                      <h5 class="text-white mb-4">Company</h5>
-                      <a class="btn btn-link text-white-50" href="">About Us</a>
-                      <a class="btn btn-link text-white-50" href="">Contact Us</a>
-                      <a class="btn btn-link text-white-50" href="">Our Services</a>
-                      <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
-                      <a class="btn btn-link text-white-50" href="">Terms & Condition</a>
-                  </div>
-                  <div class="col-lg-3 col-md-6">
-                      <h5 class="text-white mb-4">Quick Links</h5>
-                      <a class="btn btn-link text-white-50" href="">About Us</a>
-                      <a class="btn btn-link text-white-50" href="">Contact Us</a>
-                      <a class="btn btn-link text-white-50" href="">Our Services</a>
-                      <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
-                      <a class="btn btn-link text-white-50" href="">Terms & Condition</a>
-                  </div>
-                  <div class="col-lg-3 col-md-6">
-                      <h5 class="text-white mb-4">Contact</h5>
-                      <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>1166 Jefferson Ave Suite A, Buffalo, NY 14208</p>
-                      <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>(716) 247-5310</p>
-                      <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@sayyesbuffalo.org</p>
-                      <div class="d-flex pt-2">
-                          <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/SayYesBuffalo/"><i class="fab fa-facebook-f"></i></a>
-                          <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/channel/UCzppJgEFkfs2tCyoUgMMu8w/videos"><i class="fab fa-youtube"></i></a>
-                          <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/company/sayyesbuffalo/"><i class="fab fa-linkedin-in"></i></a>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 col-md-6">
-                      <h5 class="text-white mb-4">Newsletter</h5>
-                      <p>Stay in the know with our newsletter! Get exclusive updates on job opportunities, resources, and career development tailored for Say Yes Buffalo Scholars and Alumni.</p>
-                      <div class="position-relative mx-auto" style="max-width: 400px;">
-                          <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your Email">
-                          <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Sign Up</button>
-                      </div>
-                  </div>
+      <!-- Footer Start -->
+      <div
+        class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn"
+        data-wow-delay="0.1s"
+      >
+        <div class="container py-5">
+          <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Company</h5>
+              <a class="btn btn-link text-white-50" href="">About Us</a>
+              <a class="btn btn-link text-white-50" href="">Contact Us</a>
+              <a class="btn btn-link text-white-50" href="">Our Services</a>
+              <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
+              <a class="btn btn-link text-white-50" href=""
+                >Terms & Condition</a
+              >
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Quick Links</h5>
+              <a class="btn btn-link text-white-50" href="">About Us</a>
+              <a class="btn btn-link text-white-50" href="">Contact Us</a>
+              <a class="btn btn-link text-white-50" href="">Our Services</a>
+              <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
+              <a class="btn btn-link text-white-50" href=""
+                >Terms & Condition</a
+              >
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Contact</h5>
+              <p class="mb-2">
+                <i class="fa fa-map-marker-alt me-3"></i>1166 Jefferson Ave
+                Suite A, Buffalo, NY 14208
+              </p>
+              <p class="mb-2">
+                <i class="fa fa-phone-alt me-3"></i>(716) 247-5310
+              </p>
+              <p class="mb-2">
+                <i class="fa fa-envelope me-3"></i>info@sayyesbuffalo.org
+              </p>
+              <div class="d-flex pt-2">
+                <a
+                  class="btn btn-outline-light btn-social"
+                  href="https://www.facebook.com/SayYesBuffalo/"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <a
+                  class="btn btn-outline-light btn-social"
+                  href="https://www.youtube.com/channel/UCzppJgEFkfs2tCyoUgMMu8w/videos"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+                <a
+                  class="btn btn-outline-light btn-social"
+                  href="https://www.linkedin.com/company/sayyesbuffalo/"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </div>
-          </div>
-          <div class="container">
-              <div class="copyright">
-                  <div class="row">
-                      <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                          &copy; <a class="border-bottom" href="#">sayyestocareersbuffalo.com</a>, All Right Reserved. 
-            
-            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                      </div>
-                  </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Newsletter</h5>
+              <p>
+                Stay in the know with our newsletter! Get exclusive updates on
+                job opportunities, resources, and career development tailored
+                for Say Yes Buffalo Scholars and Alumni.
+              </p>
+              <div class="position-relative mx-auto" style="max-width: 400px">
+                <input
+                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  type="text"
+                  placeholder="Your Email"
+                />
+                <button
+                  type="button"
+                  class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
+                >
+                  Sign Up
+                </button>
               </div>
+            </div>
           </div>
+        </div>
+        <div class="container">
+          <div class="copyright">
+            <div class="row">
+              <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy;
+                <a class="border-bottom" href="#">sayyestocareersbuffalo.com</a
+                >, All Right Reserved.
+
+                <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                Designed By
+                <a class="border-bottom" href="https://htmlcodex.com"
+                  >HTML Codex</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- Footer End -->
 
-
       <!-- Back to Top -->
-      <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-  </div>
+      <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+        ><i class="bi bi-arrow-up"></i
+      ></a>
+    </div>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
