--- a/job-list.html
+++ b/job-list.html
@@ -83,7 +83,7 @@
             <a href="signin.html" class="nav-item nav-link">Sign In</a>
           </div>
           <a
-            href=""
+            href="postajob.html"
             class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block"
             >Post A Job<i class="fa fa-arrow-right ms-3"></i
           ></a>
