--- a/postajob.html
+++ b/postajob.html
@@ -83,7 +83,7 @@
             <a href="signin.html" class="nav-item nav-link active">Sign In</a>
           </div>
           <a
-            href="postajob.html"
+            href="#"
             class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block"
             >Post A Job<i class="fa fa-arrow-right ms-3"></i
           ></a>
@@ -91,25 +91,36 @@
       </nav>
       <!-- Navbar End -->
 
-      <!-- Sign In Start -->
+      <!-- Post A Job Start -->
       <div class="container-xxl py-5">
         <div class="container">
           <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.05s">
-            Sign In
+            Post A Job
           </h1>
-            <div class="col-md-4 mx-auto">
+            <div class="col-md-6 mx-auto">
               <div class="wow fadeInUp" data-wow-delay="0.05s">
                 <form>
                   <div class="row g-3">
+                    <div class="col-md-12">
+                        <div class="form-floating">
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="job-title"
+                            placeholder="Job Title"
+                          />
+                          <label for="job-title">Job Title</label>
+                        </div>
+                    </div>
                     <div class="col-md-12">
                       <div class="form-floating">
                         <input
                           type="email"
                           class="form-control"
-                          id="email"
-                          placeholder="Email"
+                          id="job-company"
+                          placeholder="Company"
                         />
-                        <label for="email">Email</label>
+                        <label for="job-company">Company</label>
                       </div>
                     </div>
                     <div class="col-md-12">
@@ -117,29 +128,58 @@
                           <input
                             type="text"
                             class="form-control"
-                            id="password"
-                            placeholder="Password"
+                            id="job-type"
+                            placeholder="Job Type"
                           />
-                          <label for="name">Password</label>
+                          <label for="job-type">Job Type</label>
                         </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-floating">
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="job-location"
+                            placeholder="Location"
+                          />
+                          <label for="job-location">Location</label>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-floating">
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="job-pay"
+                          placeholder="Pay"
+                        />
+                        <label for="job-pay">Pay</label>
                       </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-floating">
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="job-deadline"
+                            placeholder="Deadline"
+                          />
+                          <label for="job-deadline">Deadline</label>
+                        </div>
+                    </div>
                     <div class="col-12">
                       <button class="btn btn-primary w-100 py-3" type="submit">
-                        Sign In
+                        Post This Job!
                       </button>
                     </div>
                   </div>
                 </form>
-                <p class="mt-4">
-                    Don't have an account yet?
-                    <a href="signup.html">Sign up!</a>
-                  </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- Sign In End -->
+      <!-- Post A Job End -->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -190,6 +230,14 @@
             
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
             Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                      </div>
+                      <div class="col-md-6 text-center text-md-end">
+                          <div class="footer-menu">
+                              <a href="">Home</a>
+                              <a href="">Cookies</a>
+                              <a href="">Help</a>
+                              <a href="">FQAs</a>
+                          </div>
                       </div>
                   </div>
               </div>
