--- a/signin.html
+++ b/signin.html
@@ -134,6 +134,10 @@
                     Don't have an account yet?
                     <a href="signup.html">Sign up!</a>
                   </p>
+                  <p class="mt-4">
+                    Looking for administrative data?
+                    <a href="admin_dashboard/signin.html">Login here!</a>
+                  </p>
               </div>
             </div>
           </div>
