--- a/job-list.html
+++ b/job-list.html
@@ -92,7 +92,7 @@
       <!-- Navbar End -->
 
       <!-- Header End -->
-      <div class="container-xxl py-5 bg-dark page-header mb-5">
+      <div class="container-xxl py-5 bg-dark page-header-2 mb-5">
         <div class="container my-5 pt-5 pb-4">
           <h1 class="display-3 text-white mb-3 animated slideInDown">
             Job List
