--- a/postajob.html
+++ b/postajob.html
@@ -186,20 +186,16 @@
           <div class="container py-5">
               <div class="row g-5">
                   <div class="col-lg-3 col-md-6">
-                      <h5 class="text-white mb-4">Company</h5>
-                      <a class="btn btn-link text-white-50" href="">About Us</a>
-                      <a class="btn btn-link text-white-50" href="">Contact Us</a>
-                      <a class="btn btn-link text-white-50" href="">Our Services</a>
-                      <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
-                      <a class="btn btn-link text-white-50" href="">Terms & Condition</a>
+                      <h5 class="text-white mb-4">Say Yes to Education Buffalo</h5>
+                      <a class="btn btn-link text-white-50" href="https://sayyesbuffalo.org/about/story-mission/">About Us</a>
+                      <a class="btn btn-link text-white-50" href="https://sayyesbuffalo.org/about/contact/">Contact Us</a>
+                      <a class="btn btn-link text-white-50" href="https://www.youtube.com/watch?v=Jw-wm_nvStc&ab_channel=SayYesBuffalo">Our Services</a>
                   </div>
                   <div class="col-lg-3 col-md-6">
                       <h5 class="text-white mb-4">Quick Links</h5>
-                      <a class="btn btn-link text-white-50" href="">About Us</a>
-                      <a class="btn btn-link text-white-50" href="">Contact Us</a>
-                      <a class="btn btn-link text-white-50" href="">Our Services</a>
-                      <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
-                      <a class="btn btn-link text-white-50" href="">Terms & Condition</a>
+                      <a class="btn btn-link text-white-50" href="about.html">About Us</a>
+                      <a class="btn btn-link text-white-50" href="contact.html">Contact Us</a>
+                      <a class="btn btn-link text-white-50" href="admin_dashboard/signin.html">Administrative Dashboard</a>
                   </div>
                   <div class="col-lg-3 col-md-6">
                       <h5 class="text-white mb-4">Contact</h5>
