--- a/admin_dashboard/table.html
+++ b/admin_dashboard/table.html
@@ -61,6 +61,7 @@
                 <div class="navbar-nav w-100">
                     <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <a href="table.html" class="nav-item nav-link active"><i class="fa fa-table me-2"></i>Tables</a>
+                    <a href="../index.html" class="nav-item nav-link"><i class="fa fa-chart-pie me-2"></i>Careers Page</a>
                 </div>
             </nav>
         </div>
